packages/core/test/fixtures/parse-errors/invalid-operator.pine
// @test parse-errors/invalid-operator
// @description Invalid operator sequence should fail
// @expects parse: fail

//@version=6
indicator("Parse Error Test")

x = 1 ++ 2

plot(x)
